# codebase-indexer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  INSTALL.md  LICENSE  README.md  ROADMAP.md  main.py  pyproject.toml
.github/workflows/: ci.yml
.planning/: DEVOPS_REQUEST.md  E2E_TEST_OPTIMIZATION_PLAN.md  FRONTEND_AGENT_BRIEF.md  NEXT_STEPS_2026_05_03.md  README.md  TEAM_DEPLOYMENT_PLAN.md
.planning/phase-plans/: PHASE_1_M365_OAUTH.md  PHASE_2_PERSISTENT_JOBS.md  PHASE_3_DOCKER.md  PHASE_4_GRAFANA.md  PHASE_5_REALTIME_UPDATER.md  PHASE_8_HNSW_VSS.md  PHASE_9_CROSS_REPO_RANK.md
.planning/runs/: CYCLE_5_FOLLOWUPS.md  README.md  SUCCESS.md  SUCCESS_90Q.md
.planning/runs/20260501T225442Z/: RUN_SUMMARY.md
.planning/runs/20260502T163015Z/: RUN_SUMMARY.md  decision.md  metrics_snapshot_post.txt  metrics_snapshot_pre.txt  query_grades.jsonl  query_results.jsonl
.planning/runs/20260502T164501Z/: RUN_SUMMARY.md  index_phase_times.json  metrics_snapshot_post.txt  metrics_snapshot_pre.txt  query_grades.jsonl  query_results.jsonl
.planning/runs/20260502T203105Z/: RUN_SUMMARY.md  metrics_snapshot_post.txt  metrics_snapshot_pre.txt  query_grades.jsonl  query_results.jsonl
.planning/runs/20260502T203123Z/: RUN_SUMMARY.md  index_phase_times.json  metrics_snapshot_post.txt  metrics_snapshot_pre.txt  query_grades.jsonl  query_results.jsonl
.planning/runs/20260502T205001Z/: RUN_SUMMARY.md  decision.md  index_phase_times.json  metrics_snapshot_post.txt  metrics_snapshot_pre.txt  query_grades.jsonl  query_results.jsonl
.planning/runs/20260503T202622Z/: RUN_SUMMARY.md  index_phase_times.json  metrics_snapshot_post.txt  metrics_snapshot_pre.txt  query_grades.jsonl  query_results.jsonl
.planning/runs/20260503T203318Z/: RUN_SUMMARY.md  decision.md  metrics_snapshot_post.txt  metrics_snapshot_pre.txt  query_grades.jsonl  query_results.jsonl
app/: config.py  main.py  metrics.py  models.py
app/cli/: __init__.py  client.py  config.py  daemon.py  main.py  wiring.py
app/embedders/: __init__.py  _env_utils.py  availability.py  base.py  llama_server.py  local.py  openai.py  prefixes.py  sagemaker.py  sync_bridge.py  tei.py
app/routers/: admin.py  context_bundle.py  disk.py  embed.py  explorer.py  github.py  health.py  index.py  repos.py  search.py  symbols.py  websocket.py
app/scripts/: __init__.py  embed_driver.py
app/services/: bm25_index.py  bundle_reranker.py  centroid.py  chunk_strategies.py  cross_repo_imports.py  embedder.py  jobs_store.py  ladybug_buffer_pool.py  ladybug_ingestor.py  ladybug_pool.py  ladybug_schema.py  lm_studio.py  manifest_client.py  markdown_indexer.py  neighbors.py  pagerank.py  reranker.py  retrieval.py  s3_restore.py  s3_store.py  sagemaker_embedder.py  slug.py  source_fetch.py  symbol_cards.py  tantivy_index.py  watch_manager.py
codebase_rag/: VENDORED.md  cli.py  cli_help.py  config.py  constants.py  cypher_queries.py  embedder.py  graph_updater.py  language_spec.py  logs.py  main.py  parser_loader.py  types_defs.py  vector_store.py
codebase_rag/mcp/: server.py  tools.py
codebase_rag/parsers/: call_processor.py  call_resolver.py  definition_processor.py  factory.py  function_ingest.py  import_processor.py  parallel_calls.py  rebind_processor.py  stdlib_extractor.py  tsconfig_resolver.py  type_inference.py  utils.py
codebase_rag/services/: contextual_prefix.py  graph_service.py  ladybug_ingestor.py  ladybug_schema.py
codebase_rag/storage/: __init__.py  centrality.py  docstring_format.py  vector_store.py  vector_store_arrow.py
codebase_rag/tools/: health_checker.py  parse_scip.py  semantic_search.py
codebase_rag/utils/: dependencies.py  path_utils.py
docs/: CONFIG_AUDIT.md  CONFIG_AUDIT_2.md  EMBEDDERS.md  SEARCH_RANKING.md  TESTING_GAPS.md  TESTING_GAPS_2.md  embedder-eval-plan.md  embedder-poc-768-results.md  embedder-poc-768.md  embedder-sagemaker-swap-nomic-v1.5.md  embedding-pipeline-fix.md  incremental-indexing-plan.md  qwen3-embedder-migration-spec.md  reranker-bundle-tiebreak-spike.md  retrieval-methodology-from-agentalloy.md  symbol-cards-findings.md
docs/_diagnostics/: buc-1574-incremental-embed.md  phase1.5-pagerank-audit.md
docs/adr/: 0001-defer-hnsw-vss-indexes.md  0002-defer-coderanklm-proper.md  0003-defer-cross-repo-unified-ranking.md  README.md
eval/oracle/: dsg-cgr-001.json  dsg-cgr-002.json  dsg-cgr-003.json  dsg-cgr-004.json  dsg-cgr-005.json  dsg-cis-001.json  dsg-cis-002.json  dsg-cis-003.json  dsg-cis-004.json  dsg-cis-005.json  dsg-tf-001.json  dsg-tf-002.json  dsg-tf-003.json  dsg-tf-004.json  dsg-tf-005.json
integrations/claude/: README.md  install.sh
scripts/: _harness_common.py  ask_local_llm.py  backfill-last-indexed-sha.py  embed-v2-backfill.py  generate_symbol_cards.py  grade_queries.py  launch-explorer.sh  lm_studio_smoke.py  migrate-tantivy.py  probes.json  queries.json  rebuild_tantivy.py  run_arms.py  run_cycle_loop.sh  run_e2e.py  run_poc_768.py  run_probes.py  run_recall.py  spike_rerank_cgr001.py  test_watch_e2e.sh
tests/: test_admin.py  test_bm25_service.py  test_bundle_reranker.py  test_calls_relationship_persist.py  test_centroid.py  test_config_data_root.py  test_context_bundle.py  test_cross_repo_imports.py  test_defines_file_path.py  test_definition_node_flush_at_scale.py  test_definition_silent_drop_guard.py  test_delete_index.py  test_diff_metrics.py  test_embed.py  test_embed_driver.py  test_embed_persist_guard.py  test_embed_reconcile.py  test_embedder.py  test_embedder_llama_server.py  test_embedder_local.py  test_embedder_openai.py  test_embedder_prefixes.py  test_embedder_sagemaker.py  test_embedder_tei.py  test_embedders.py  test_embedding_phase_stall.py  test_explorer.py  test_file_summaries.py  test_full_ingest_no_truncation.py  test_generate_symbol_cards.py  test_github_allowlist.py  test_github_app_token.py  test_github_orgs.py  test_github_token_precedence.py  test_grade_design.py  test_health.py  test_health_embedder.py  test_hierarchical_chunking.py  test_incremental_embed.py  test_index.py  (+27 more)
tests/cli/: test_cli_commands.py
(+23 files in other folders)
