[project]
name = "code-indexer-service"
version = "0.1.0"
description = "FastAPI HTTP gateway exposing code-graph-rag indexing and search to TheForge"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.45.0",
    "real-ladybug>=0.15.3",
    "code-graph-rag",
    # Semantic search stack — required for /search/semantic and /context-bundle
    # to return populated results.  CodeRankEmbed runs on CPU via torch; transformers
    # ships the tokenizer + model loader.  ~500MB installed footprint, one-time.
    # DuckDB v5.3 §6.5: per-repo .duck files with FLOAT[768] + array_cosine_distance.
    # Optional listwise rerank via nomic-ai/CodeRankLLM is provided through LM Studio
    # (see app/services/lm_studio.py) — no extra Python deps required.
    "duckdb>=1.1.0",
    "bm25s>=0.2.13",
    # Plan G + J: structured docstring extraction + PageRank centrality.
    # Both modules live in code-graph-rag/codebase_rag/storage/ and are
    # imported at runtime by app/routers/index.py and search.py — declare
    # them here so they are present without needing the [semantic] extra
    # of the editable code-graph-rag dependency.
    "docstring-parser>=0.16",
    "networkx>=3.2",
    # PageRank in networkx 3.x dispatches to ``_pagerank_scipy`` which
    # requires scipy at compute time. Phase 1.5 unit tests exercise the
    # pure-python core directly, so scipy must be a hard dep, not optional.
    "scipy>=1.11",
    "torch>=2.6.0",
    "transformers>=4.0.0",
    # Plan F: CodeRankEmbed (nomic-ai/CodeRankEmbed) requires einops at model load time
    "einops>=0.7.0",
    "tree-sitter-javascript>=0.23.1",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-c-sharp>=0.23.5",
    "tree-sitter-go>=0.23.4",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-rust>=0.24.0",
    # AWS SDK: used by sagemaker_embedder (SigV4 signing) and s3_store (snapshot/restore).
    # botocore is a transitive dep of boto3 — listing both pins the pair explicitly.
    "boto3>=1.34.0",
    "prometheus-client>=0.20",
    "prometheus-fastapi-instrumentator>=7.0",
    # Phase 1.1 — Tantivy BM25 lexical arm. Apache 2.0; embedded full-text
    # index per repo at .cgr/repos/<slug>.tantivy/. Replaces the in-memory
    # bm25s rebuild on every search and the substring-only /search/files
    # filter with a persisted, ranked sparse-retrieval index.
    "tantivy>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
code-graph-rag = { path = "../code-graph-rag", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
    # BUC-1555b: moto[s3] mocks boto3 in tests/test_s3_restore.py so we can
    # exercise the full snapshot → wipe → restore round-trip without real AWS.
    "moto[s3]>=5.0.0",
]
